fix: add paddings for gifts slider on mobile

--- a/src/blocks/gift/gift.scss
+++ b/src/blocks/gift/gift.scss
@@ -40,6 +40,11 @@
   &__container {
     @extend .container;
   }
+  &__swiper {
+    @include mobile-only {
+      @include padding-x(12px);
+    }
+  }
   &__info {
     margin-bottom: 40px;
 
